--- a/app/views/layouts/store.html.erb
+++ b/app/views/layouts/store.html.erb
@@ -5,6 +5,7 @@
 <head>
   <title>Pragprog Books Online Store</title>
   <%= stylesheet_link_tag 'depot', :media => "all" %>
+  <%= javascript_include_tag :defaults %>
 </head>
 <body id="store">
 	<div id="banner">
@@ -13,6 +14,9 @@
 	</div>
 	<div id="columns">
 		<div id="side">
+			<% hidden_div_if(@cart.items.empty?, :id => "cart") do %>
+			  <%= render(:partial => "cart", :object => @cart) %>
+			<% end %>
 			<a href="http://www....">Home</a><br />
       		<a href="http://www..../faq">Questions</a><br />
 	      	<a href="http://www..../news">News</a><br />
